<resources>
    <string name="app_name">RPGGame</string>
    <string name="liwanag_vs_kadiliman">LIWANAG VS KADILIMAN</string>
    <string name="hero_image">Hero Image</string>
    <string name="enemy_image">Enemy Image</string>
    <string name="turn_indicator">Turn Indicator</string>
    <string name="heal">Heal</string>
    <string name="defend">Defend</string>
    <string name="attack">Attack</string>
    <string name="game_state">Game State</string>
    <string name="actions_and_effects">Actions and Effects</string>
    <string name="enemy_action_effect">Enemy Action Effect</string>
    <string name="hero_action_effect">Hero Action Effect</string>
    <string name="hero_name">Hero Name</string>
    <string name="hp_100_nattack_20_ndefense_10">HP: 100\nAttack: 20\nDefense: 10</string>
    <string name="enemy_name">Enemy Name</string>
    <string name="hp_100_nattack_20_ndefense_10_enemy">HP: 100\nAttack: 20\nDefense: 10</string>
    <string name="battle_area">Battle Area</string>
    <string name="level_1">Level: 1</string>
</resources>